--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -170,9 +170,6 @@ button:disabled {
     color: var(--color-primary);
 }
 
-.btn-secundary i {
-    line-height: var(--font-btn);
-}
 
 /* -----------------------------
             CARD 
@@ -368,7 +365,7 @@ button:disabled {
     float: right;
     font-weight: bold;
     cursor: pointer;
-    font-size: 24px;
+    font-size: 32px;
 }
 
 .close-modal:hover,
@@ -416,7 +413,7 @@ textarea {
     background: rgba(238, 238, 238, 0.10);
     color: white;
     font-family: var(--font);
-    /*  font-size: var(--font-body); */
+    font-size: var(--font-body);
 }
 
 textarea {
@@ -430,6 +427,10 @@ textarea:focus {
     outline: none;
 }
 
+input::placeholder,
+textarea::placeholder {
+    font-size: 1rem;
+}
 
 .form-row {
     display: flex;
@@ -449,7 +450,7 @@ form button {
 
 .urb_btn-load {
     background-color: var(--color-secundary);
-    color: var(--color-text); 
+    color: var(--color-text);
     display: none;
 }
 
@@ -459,15 +460,15 @@ form button {
 
 .urb_btn-confirm {
     background-color: var(--bg-success);
-    color: var(--bg-white); 
-     display: none;
+    color: var(--bg-white);
+    display: none;
 }
 
 .urb_btn-confirm small {
     margin-right: .5rem;
 }
 
-.urb_msm-error{
+.urb_msm-error {
     display: none;
     justify-content: space-between;
     gap: 12px;
@@ -476,13 +477,14 @@ form button {
     border-radius: 4px;
     align-items: center;
 }
+
 /* -----------------------------
             CHECK 
 ------------------------------*/
 .checkbox-container {
     height: 28px;
-    display: flex;
     align-items: center;
+    display: contents;
 }
 
 .checkbox-container a {
@@ -546,7 +548,6 @@ form button {
     vertical-align: middle;
     color: var(--bg-white);
     line-height: 2rem;
-    padding: .5rem;
     transition: 1S;
     cursor: pointer;
     z-index: 2;
@@ -688,7 +689,7 @@ p {
     margin-left: -60px;
     margin-top: -60px;
     overflow: hidden;
-    transform-origin: 60px 60px; 
+    transform-origin: 60px 60px;
     animation: rotate 1.2s infinite linear;
 }
 
